--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
     <meta http-equiv="X-Frame-Options" content="DENY" />
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: 'unsafe-inline' 'unsafe-eval' https://*.google-analytics.com https://*.facebook.com https://*.doubleclick.net;" />
-    <title>Vérification d'âge - Accès aux contenus exclusifs</title>
+    <title>BigFarma nos solutions naturelles pour le bien-être et la relaxation.</title>
     
     <!-- Préchargement optimisé des ressources -->
     <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin="anonymous">
